--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Story-of-Electricity_4710
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Munro, John
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '496'
     url: http://www.gutenberg.org/2009/agents/496
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4710#The-Story-of-Electricity
 gutenberg_issued: '2003-12-01'
 gutenberg_type: Text
 identifiers:
