--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Story-of-Electricity_4710
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Electricity'
 - !lcc 'QC'
+- GITenberg
 title: The Story of Electricity
 url: http://www.gutenberg.org/ebooks/4710
